perf: server-side pagination on /practice — only 25 problems per request
Backend: /api/practice/problems?page=0&size=25 returns paginated response
Frontend: fetches per-page, no more loading all 104 problems at once